  * New WallBoard3_mail.php (2017-059).
  * Add upstream Rev. 2866:
    - non_agent_api.php: add $callback_type='ANYONE'.
  * Add upstream Rev. 2867:
    - admin_listloader_third_gen.php: move to extras.
    - admin_listloader_fourth_gen.php,
      leadloader_template_display.php: Fix for custom field duplicate issue,
       removed link to old lead loader.

  [Axel Huizinga]
  * vdc_phonebook_display.php: Change to $_SERVER['SERVER_NAME'].


2.25.20
  [Jörg Frings-Fürst]
  * help.php: add missing '<'.
  * New DB-Schema 1527: (2017-054)
    - vicidial_list: Increase the size of the field alt_phone to 18.
    - WallBoardStat: add maxwaittime and Tmaxwaittime.
  * Add upstream Rev. 2856:
    - dispo_send_email.php: Added ALL-STATUSES option and called_count_trigger
      option.
  * Add upstream Rev. 2857:
    - dispo_send_email.php: Added additional_notes option and email attachments
      options(1-5).
  * AST_CRON_WallBoard3_gen.php:
    - Add maxwaittime.
  * Wall_js.php:
    - Add maxwaittime.
    - Add AnzeigeNull with default 'n'.
  * WallBoard3.php:
    -  Add AnzeigeNull with default 'n'.
  * Release 2.25.20 2017-11-21.

2.25.19

  [Jörg Frings-Fürst]
  * AST_CRON_WallBoard3_gen.php:
    - Typo InGroup Search.
    - Add function GetServicelevel.
    - Replace mysqli_fetch_row with mysqli_fetch_array.
  * New DB-Schema 1526: (2017-053)
    - Add servicelevel_* to system_settings.
  * admin.php:
    - Add servicelevel_* to system_settings.
    - Rename Git Release to Patch-Level.
  * help.php:
    - Add help for servicelevel.
    - Add missing help for dectect 3way calls.
  * Add upstream Rev. 2855:
    - functions.php,
      vdc_db_query.php,
      vdc_form_display.php,
      admin_lists_custom.php,
      help.php: Added code for duplicate custom fields.
  * Release 2.25.19 2017-11-18.

2.25.18

  [Jörg Frings-Fürst]
  * ADMIN_keepalive_ALL.pl: Add allow=ulaw and allow=slin to ASTloop,
      ASTblind and ASTplay (2017-048).
  * Add upstream Rev. 2849: