@@ -65,6 +65,8 @@
     - admin_listloader_fourth_gen.php,
       leadloader_template_display.php: Fix for custom field duplicate issue,
        removed link to old lead loader.
+  * Add upstream Rev. 2868:
+    - vdc_db_query.php: Fixes for custom field duplicate fields.
 
   [Axel Huizinga]
   * vdc_phonebook_display.php: Change to $_SERVER['SERVER_NAME'].
